styles/layout.scss
// See: https://sass-lang.com/

/* =============
    Global
================ */
* {
  margin: 0;
}
html {
  overflow: scroll;
  overflow-x: hidden;
}
::-webkit-scrollbar {
  width: 0;
  background: transparent;
}

$primary-btn-color: #35d461;
$secondary-btn-color: #37b6f6;
$home-page-bg-color: #72d4f5;
$story-page-bg-color: #047cac;
$user-stories-bg-color: #9ad2a9;
$primary-bg-color: #f5f5f5;
$primary-text-color: #232b2b;
$box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
  0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
  0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
  0 100px 80px rgba(0, 0, 0, 0.12);

body {
  background-color: $primary-bg-color;
  background-image: url("../imgs/bg.jpg");
  h1 {
    font-family: "Gloria Hallelujah", cursive;
    font-size: 4rem;
  }
  font-family: "Signika", sans-serif;
  color: #232b2b;
}

button {
  padding: 0.3em 0.7em;
  border: 0;
  border-radius: 5px;
  background-color: $primary-btn-color;
  transition: 200ms ease-in;
  &:hover {
    cursor: pointer;
    background: darken($primary-btn-color, 5%);
  }
}

#error-msg {
  color: #f55;
  padding-right: 1em;
  text-align: center;
}

/* =============
    Typography
================ */

/* =============
    Layout
================ */

.app-container {
  width: 75%;
  min-width: 375px;
  max-width: 950px;
  margin: 0 auto;
  height: 85vh;
  margin-top: 12rem;
  transition: 400ms ease-in;
}

.content-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 16px;
  height: 70vh;
  background: $home-page-bg-color;
  box-shadow: $box-shadow;
  padding: 2em;
  overflow: scroll;
  transition: 150ms ease-in;
}

.view-story-container {
  display: flex;
  flex-direction: row-reverse;
  align-items: flex-start;
  justify-content: space-between;
  padding: 2em;
  transition: 200ms ease-in;
  .story-article {
    margin-top: 0;
    width: 50%;
  }
  .side-bar {
    min-width: 300px;
    width: 45%;
  }
  .text-field {
    width: 100%;
  }
}

@media screen and (max-width: 935px) {
  .view-story-container {
    flex-direction: column-reverse;
    align-items: center;
    .story-article {
      margin-top: 2.5em;
      width: 50%;
    }
    .side-bar {
      margin-top: 4.5em;
    }
    .text-field {
      width: 100%;
    }
  }
  .story-article:first-child {
    margin-top: 1.5em !important;
  }
}
.view-user-page {
  transition: 150ms ease-in;
  background: $user-stories-bg-color;
}

// Main Tab headers

.nav-tabs {
  display: flex;
  justify-content: space-evenly;
  padding: 0;
  #home-page {
    background: $home-page-bg-color;
  }
  #user-page {
    background: $user-stories-bg-color;
  }
  li {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    font-weight: 600;
    list-style: none;
    border-bottom: 0;
    text-align: center;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
    padding: 0.4em 0.8em;
    padding-top: 0.5em;
    &:hover {
      cursor: pointer;
    }
    i {
      margin-left: 0.5em;
      color: $primary-text-color;
    }
  }
}

@media screen and (max-width: 675px) {
  .app-container {
    margin-top: 12rem;
  }
  .nav-tabs {
    li {
      font-size: 1.4rem;
      width: 45%;
      padding: 0.7em 0;
    }
  }
}
@media screen and (min-width: 750px) {
  .nav-tabs {
    li {
      width: 45%;
    }
  }
}
@media screen and (min-width: 800px) {
  .nav-tabs {
    li {
      width: 40%;
      max-width: 300px;
    }
  }
}

// Home-tab
.create-story-btn {
  display: flex;
  position: fixed;
  justify-content: center;
  align-items: center;
  bottom: 45px;
  right: 180px;
  z-index: 99;
  background: $story-page-bg-color;
  color: #fff;
  border: 0;
  width: 70px;
  height: 70px;
  border-radius: 50%;
  transition: 200ms ease-in;
  text-decoration: none;
  &:hover {
    background: darken($story-page-bg-color, 5%);
    cursor: pointer;
  }
  i {
    font-size: 2em;
    color: #fff;
  }
}

.modal {
  background: $story-page-bg-color !important;
}

.modal-content {
  h2 {
    text-align: center;
    color: #fff;
    font-size: 1.8rem;
    font-family: "Gloria Hallelujah", cursive !important;
  }
}
.create-story-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 85%;
  margin: 0 auto;
  input,
  textarea {
    width: 75%;
    padding: 0.5em;
    margin-bottom: 0.5em;
    border: 0;
    border-radius: 8px;
    font-size: 1.2em;
  }
  textarea {
    resize: none;
  }
  button {
    padding: 0.3em 0.8em;
    border: 0;
    border-radius: 5px;
    background-color: $primary-btn-color;
    transition: 200ms ease-in;
    &:hover {
      cursor: pointer;
      background: darken($primary-btn-color, 5%);
    }
  }
}

// story article
.story-article {
  background: $primary-bg-color;
  box-shadow: $box-shadow;
  width: 85%;
  min-width: 320px;
  max-width: 550px;
  border-radius: 5px;
  margin-top: 2em;
  padding: 1.5em;

  header {
    display: flex;
    justify-content: space-between;

    div {
      display: flex;
    }
  }
  .avatar {
    margin-right: 0.5em;
    width: 25px;
    height: 25px;
  }

  .story-content {
    margin-top: 1em;
    padding: 0;
  }
  .contributions-container {
    p {
      margin-top: 0.5em;
      text-indent: 0.5em;
    }
  }

  footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 1em;
  }
}

.story-animation {
  animation: slide-up 0.4s ease;
}
@keyframes slide-up {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.story-article:first-child {
  margin-top: 3em;
}

// Story Tab

.contribution-widget {
  background: $story-page-bg-color;
  padding: 1em;
  border-radius: 10px;

  h2 {
    color: $primary-text-color;
    padding: 0.3em;
    margin-bottom: 0.5em;
  }

  form {
    display: flex;
    flex-direction: column;
  }
  textarea {
    resize: none;
    padding: 0.5em;
    border-radius: 10px;
    outline: 0;
  }
  button {
    min-width: 75px;
    width: 30%;
    margin-top: 0.5em;
    margin-right: auto;
  }
}

.contribution {
  border-radius: 16px;
  margin-top: 2em;
  padding: 1.5em;
  padding: 1em;
  transition: 200ms ease-in;
  animation: fade-in 0.3s ease-in;
  &:hover {
    box-shadow: $box-shadow;
  }
  header {
    font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: space-between;
    .avatar {
      margin-right: 0.5em;
      width: 25px;
      height: 25px;
    }
    div {
      display: flex;
      align-items: center;
      p {
        border: 0;
      }
    }
  }
  p {
    padding: 1em 0;
    border-bottom: 2px solid #244751;
  }
  footer {
    display: flex;
    margin-top: 0.5em;
    align-items: center;
    justify-content: space-between;
    small {
      font-weight: 600;
    }
  }
  .contribution-btn-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    &:hover {
      cursor: pointer;
    }
    button {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 50%;
      background: 0;
    }
    i {
      transition: 200ms ease-in;
      margin-left: 0.3em;
      &:hover {
        transform: scale(1.2);
      }
    }
  }
}

.submit-contribution {
  margin-bottom: 0.5em;
}

.added-contribution {
  animation: fade-in 0.4s ease;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0.5;
  }

  75% {
    opacity: 0.75;
  }
  100% {
    opacity: 1;
  }
}

.jump-btn {
  display: none;
  position: fixed;
  bottom: 45px;
  right: 60px;
  z-index: 99;
  background: #ff0000;
  color: #fff;
  border: 0;
  width: 70px;
  height: 70px;
  border-radius: 50%;
  transition: 200ms ease-in;
  &:hover {
    background: #ff00009c;
    cursor: pointer;
  }
  i {
    font-size: 2em;
  }
}

@media screen and (max-width: 1100px) {
  .jump-btn {
    bottom: 140px;
    right: 60px;
  }
  .create-story-btn {
    bottom: 60px;
    right: 60px;
  }
  .create-story-btn,
  .jump-btn {
    opacity: 0.5;

    &:hover {
      opacity: 1;
    }
  }
}

//User Stories Tab
.content-container .user-stories-fail {
  text-align: center;

  button {
    height: 2em;
    width: 100%;
    color: #555;
  }
}

